data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4615.wast
;; 4. **Test Description**: Use a `br_table` instruction where the operand stack is intentionally missing necessary return values for the indexed function. This test checks for proper operand stack handling.    - **Constraint**: The operand stack lacks the necessary values required by the function signature.    - **Edge Case Relation**: Ensures the correct stack underflow behavior is triggered and checked.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func $test
      i32.const 0
      br_table 0 (i32.const 0)
      call_indirect (type $sig)
    )
  )
  "stack underflow"
)